# arduino-mqtt-sn-gateway

./: .gitignore  CMakeLists.txt  MQTT.CON  README.md
doc/: Testcases.ods
src/: CoreImpl.cpp  CoreImpl.h  CoreInterface.h  Gateway.cpp  Gateway.h  LoggerInterface.h  MqttMessageHandlerInterface.cpp  MqttMessageHandlerInterface.h  MqttSnMessageHandler.cpp  MqttSnMessageHandler.h  PersistentInterface.cpp  PersistentInterface.h  SocketInterface.cpp  SocketInterface.h  System.h  core_defines.h  global_defines.h  main.cpp  mqttsn_messages.h
src/Implementation/: Arduino.cpp  Arduino.h  ArduinoLogger.cpp  ArduinoLogger.h  ArduinoSystem.cpp  ArduinoSystem.h  SDLinuxFake.cpp  SDLinuxFake.h  SDPersistentImpl.h  SD_table_entries.h  UdpSocketImpl.cpp  UdpSocketImpl.h
src/Implementation/paho/: PahoMqttMessageHandler.cpp  PahoMqttMessageHandler.h
src/Implementation/paho/pahomqttembeddedc/MQTTClient/src/linux/: linux.cpp
